# httparse

./: Cargo.toml  README.md  build.rs
benches/: parse.rs
src/: iter.rs  lib.rs
src/simd/: mod.rs
