[package]

name = "httparse-lame"
version = "1.3.4"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
description = "A tiny, safe, zero-copy HTTP/1.x parser that's kinda lame."
repository = "https://github.com/seanmonstar/httparse"
documentation = "https://docs.rs/httparse"
readme = "README.md"
keywords = ["http", "parser", "no_std"]
categories = ["network-programming", "no-std", "parser-implementations", "web-programming"]
publish = false

build = "build.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
pico-sys = "0.0.1"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
